--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -3044,7 +3044,7 @@ spec:
                     hive:
                       properties:
                         hdfs:
-                          description: Connection to an HDFS cluster
+                          description: Connection to an HDFS cluster. Please make sure that the underlying Hive metastore also has access to the HDFS.
                           nullable: true
                           properties:
                             configMap:
@@ -3054,7 +3054,7 @@ spec:
                             - configMap
                           type: object
                         metastore:
-                          description: Mandatory connection to a Hive Metastore, which will be used as a storage for metadata
+                          description: Mandatory connection to a Hive Metastore, which will be used as a storage for metadata.
                           properties:
                             configMap:
                               description: Name of the discovery-configmap providing information about the Hive metastore
@@ -3063,7 +3063,7 @@ spec:
                             - configMap
                           type: object
                         s3:
-                          description: Connection to an S3 store
+                          description: Connection to an S3 store. Please make sure that the underlying Hive metastore also has access to the S3 store.
                           nullable: true
                           oneOf:
                             - required:
@@ -3167,7 +3167,7 @@ spec:
                     iceberg:
                       properties:
                         hdfs:
-                          description: Connection to an HDFS cluster
+                          description: Connection to an HDFS cluster. Please make sure that the underlying Hive metastore also has access to the HDFS.
                           nullable: true
                           properties:
                             configMap:
@@ -3177,7 +3177,7 @@ spec:
                             - configMap
                           type: object
                         metastore:
-                          description: Mandatory connection to a Hive Metastore, which will be used as a storage for metadata
+                          description: Mandatory connection to a Hive Metastore, which will be used as a storage for metadata.
                           properties:
                             configMap:
                               description: Name of the discovery-configmap providing information about the Hive metastore
@@ -3186,7 +3186,7 @@ spec:
                             - configMap
                           type: object
                         s3:
-                          description: Connection to an S3 store
+                          description: Connection to an S3 store. Please make sure that the underlying Hive metastore also has access to the S3 store.
                           nullable: true
                           oneOf:
                             - required:
