--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -13,27 +13,27 @@
 dimensions:
   - name: trino
     values:
-      - 377-stackable23.4.0-rc2
-      - 387-stackable23.4.0-rc2
-      - 395-stackable23.4.0-rc2
-      - 396-stackable23.4.0-rc2
-      - 403-stackable23.4.0-rc2
+      - 377-stackable23.4.0
+      - 387-stackable23.4.0
+      - 395-stackable23.4.0
+      - 396-stackable23.4.0
+      - 403-stackable23.4.0
   - name: trino-latest
     values:
-      - 403-stackable23.4.0-rc2
+      - 403-stackable23.4.0
   - name: hive
     values:
-      - 2.3.9-stackable23.4.0-rc2
-      - 3.1.3-stackable23.4.0-rc2
+      - 2.3.9-stackable23.4.0
+      - 3.1.3-stackable23.4.0
   - name: opa
     values:
-      - 0.45.0-stackable23.4.0-rc2
+      - 0.45.0-stackable23.4.0
   - name: hdfs
     values:
-      - 3.3.4-stackable23.4.0-rc2
+      - 3.3.4-stackable23.4.0
   - name: zookeeper
     values:
-      - 3.8.0-stackable23.4.0-rc2
+      - 3.8.0-stackable23.4.0
   - name: s3-use-tls
     values:
       - "true"
