--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -28,44 +28,16 @@ spec:
                   description: Trino cluster configuration options.
                   properties:
                     authentication:
+                      default: []
                       description: Authentication options for Trino.
-                      nullable: true
-                      properties:
-                        method:
-                          oneOf:
-                            - required:
-                                - multiUser
-                            - required:
-                                - ldap
-                          properties:
-                            ldap:
-                              description: LDAP based PASSWORD authentication
-                              properties:
-                                authenticationClass:
-                                  type: string
-                              required:
-                                - authenticationClass
-                              type: object
-                            multiUser:
-                              description: File based PASSWORD authentication via user:password combinations from a secret
-                              properties:
-                                userCredentialsSecret:
-                                  description: SecretReference represents a Secret Reference. It has enough information to retrieve secret in any namespace
-                                  properties:
-                                    name:
-                                      description: name is unique within a namespace to reference a secret resource.
-                                      type: string
-                                    namespace:
-                                      description: namespace defines the space within which the secret name must be unique.
-                                      type: string
-                                  type: object
-                              required:
-                                - userCredentialsSecret
-                              type: object
-                          type: object
-                      required:
-                        - method
-                      type: object
+                      items:
+                        properties:
+                          authenticationClass:
+                            type: string
+                        required:
+                          - authenticationClass
+                        type: object
+                      type: array
                     authorization:
                       description: Authorization options for Trino.
                       nullable: true
