--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -632,6 +632,7 @@ spec:
                           default:
                             enableVectorAgent: null
                             containers: {}
+                          description: Logging configuration
                           properties:
                             containers:
                               additionalProperties:
@@ -639,13 +640,14 @@ spec:
                                   - required:
                                       - custom
                                   - {}
-                                description: Fragment derived from `ContainerLogConfigChoice`
+                                description: Log configuration of the container
                                 properties:
                                   console:
+                                    description: Configuration for the console appender
                                     nullable: true
                                     properties:
                                       level:
-                                        description: Log levels
+                                        description: The log level threshold. Log events with a lower log level are discarded.
                                         enum:
                                           - TRACE
                                           - DEBUG
@@ -661,14 +663,16 @@ spec:
                                     description: Custom log configuration provided in a ConfigMap
                                     properties:
                                       configMap:
+                                        description: ConfigMap containing the log configuration files
                                         nullable: true
                                         type: string
                                     type: object
                                   file:
+                                    description: Configuration for the file appender
                                     nullable: true
                                     properties:
                                       level:
-                                        description: Log levels
+                                        description: The log level threshold. Log events with a lower log level are discarded.
                                         enum:
                                           - TRACE
                                           - DEBUG
@@ -682,9 +686,10 @@ spec:
                                     type: object
                                   loggers:
                                     additionalProperties:
+                                      description: Configuration of a logger
                                       properties:
                                         level:
-                                          description: Log levels
+                                          description: The log level threshold. Log events with a lower log level are discarded.
                                           enum:
                                             - TRACE
                                             - DEBUG
@@ -697,10 +702,13 @@ spec:
                                           type: string
                                       type: object
                                     default: {}
+                                    description: Configuration per logger
                                     type: object
                                 type: object
+                              description: Log configuration per container
                               type: object
                             enableVectorAgent:
+                              description: Wether or not to deploy a container with the Vector log agent
                               nullable: true
                               type: boolean
                           type: object
@@ -4114,6 +4122,7 @@ spec:
                                 default:
                                   enableVectorAgent: null
                                   containers: {}
+                                description: Logging configuration
                                 properties:
                                   containers:
                                     additionalProperties:
@@ -4121,13 +4130,14 @@ spec:
                                         - required:
                                             - custom
                                         - {}
-                                      description: Fragment derived from `ContainerLogConfigChoice`
+                                      description: Log configuration of the container
                                       properties:
                                         console:
+                                          description: Configuration for the console appender
                                           nullable: true
                                           properties:
                                             level:
-                                              description: Log levels
+                                              description: The log level threshold. Log events with a lower log level are discarded.
                                               enum:
                                                 - TRACE
                                                 - DEBUG
@@ -4143,14 +4153,16 @@ spec:
                                           description: Custom log configuration provided in a ConfigMap
                                           properties:
                                             configMap:
+                                              description: ConfigMap containing the log configuration files
                                               nullable: true
                                               type: string
                                           type: object
                                         file:
+                                          description: Configuration for the file appender
                                           nullable: true
                                           properties:
                                             level:
-                                              description: Log levels
+                                              description: The log level threshold. Log events with a lower log level are discarded.
                                               enum:
                                                 - TRACE
                                                 - DEBUG
@@ -4164,9 +4176,10 @@ spec:
                                           type: object
                                         loggers:
                                           additionalProperties:
+                                            description: Configuration of a logger
                                             properties:
                                               level:
-                                                description: Log levels
+                                                description: The log level threshold. Log events with a lower log level are discarded.
                                                 enum:
                                                   - TRACE
                                                   - DEBUG
@@ -4179,10 +4192,13 @@ spec:
                                                 type: string
                                             type: object
                                           default: {}
+                                          description: Configuration per logger
                                           type: object
                                       type: object
+                                    description: Log configuration per container
                                     type: object
                                   enableVectorAgent:
+                                    description: Wether or not to deploy a container with the Vector log agent
                                     nullable: true
                                     type: boolean
                                 type: object
@@ -7656,6 +7672,7 @@ spec:
                           default:
                             enableVectorAgent: null
                             containers: {}
+                          description: Logging configuration
                           properties:
                             containers:
                               additionalProperties:
@@ -7663,13 +7680,14 @@ spec:
                                   - required:
                                       - custom
                                   - {}
-                                description: Fragment derived from `ContainerLogConfigChoice`
+                                description: Log configuration of the container
                                 properties:
                                   console:
+                                    description: Configuration for the console appender
                                     nullable: true
                                     properties:
                                       level:
-                                        description: Log levels
+                                        description: The log level threshold. Log events with a lower log level are discarded.
                                         enum:
                                           - TRACE
                                           - DEBUG
@@ -7685,14 +7703,16 @@ spec:
                                     description: Custom log configuration provided in a ConfigMap
                                     properties:
                                       configMap:
+                                        description: ConfigMap containing the log configuration files
                                         nullable: true
                                         type: string
                                     type: object
                                   file:
+                                    description: Configuration for the file appender
                                     nullable: true
                                     properties:
                                       level:
-                                        description: Log levels
+                                        description: The log level threshold. Log events with a lower log level are discarded.
                                         enum:
                                           - TRACE
                                           - DEBUG
@@ -7706,9 +7726,10 @@ spec:
                                     type: object
                                   loggers:
                                     additionalProperties:
+                                      description: Configuration of a logger
                                       properties:
                                         level:
-                                          description: Log levels
+                                          description: The log level threshold. Log events with a lower log level are discarded.
                                           enum:
                                             - TRACE
                                             - DEBUG
@@ -7721,10 +7742,13 @@ spec:
                                           type: string
                                       type: object
                                     default: {}
+                                    description: Configuration per logger
                                     type: object
                                 type: object
+                              description: Log configuration per container
                               type: object
                             enableVectorAgent:
+                              description: Wether or not to deploy a container with the Vector log agent
                               nullable: true
                               type: boolean
                           type: object
@@ -11138,6 +11162,7 @@ spec:
                                 default:
                                   enableVectorAgent: null
                                   containers: {}
+                                description: Logging configuration
                                 properties:
                                   containers:
                                     additionalProperties:
@@ -11145,13 +11170,14 @@ spec:
                                         - required:
                                             - custom
                                         - {}
-                                      description: Fragment derived from `ContainerLogConfigChoice`
+                                      description: Log configuration of the container
                                       properties:
                                         console:
+                                          description: Configuration for the console appender
                                           nullable: true
                                           properties:
                                             level:
-                                              description: Log levels
+                                              description: The log level threshold. Log events with a lower log level are discarded.
                                               enum:
                                                 - TRACE
                                                 - DEBUG
@@ -11167,14 +11193,16 @@ spec:
                                           description: Custom log configuration provided in a ConfigMap
                                           properties:
                                             configMap:
+                                              description: ConfigMap containing the log configuration files
                                               nullable: true
                                               type: string
                                           type: object
                                         file:
+                                          description: Configuration for the file appender
                                           nullable: true
                                           properties:
                                             level:
-                                              description: Log levels
+                                              description: The log level threshold. Log events with a lower log level are discarded.
                                               enum:
                                                 - TRACE
                                                 - DEBUG
@@ -11188,9 +11216,10 @@ spec:
                                           type: object
                                         loggers:
                                           additionalProperties:
+                                            description: Configuration of a logger
                                             properties:
                                               level:
-                                                description: Log levels
+                                                description: The log level threshold. Log events with a lower log level are discarded.
                                                 enum:
                                                   - TRACE
                                                   - DEBUG
@@ -11203,10 +11232,13 @@ spec:
                                                 type: string
                                             type: object
                                           default: {}
+                                          description: Configuration per logger
                                           type: object
                                       type: object
+                                    description: Log configuration per container
                                     type: object
                                   enableVectorAgent:
+                                    description: Wether or not to deploy a container with the Vector log agent
                                     nullable: true
                                     type: boolean
                                 type: object
